--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
+    "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,16 @@
   "bugs": {
     "url": "https://github.com/arhellist/npmPak-newlab/issues"
   },
-  "homepage": "https://github.com/arhellist/npmPak-newlab#readme"
+  "publishConfig": {
+    "registry":"https://npm.pkg.github.com/"
+  },
+  "homepage": "https://github.com/arhellist/npmPak-newlab#readme",
+  "dependencies": {
+    "@babel/cli": "^7.21.5",
+    "@babel/core": "^7.21.8",
+    "@babel/preset-env": "^7.21.5",
+    "babel-loader": "^9.1.2",
+    "webpack": "^5.81.0",
+    "webpack-cli": "^5.0.2"
+  }
 }
